--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,6 @@
 TODO
 
-Look into:
-	- https://github.com/jsoma/tabletop
-	- https://github.com/okfn/recline.backend.gdocs
-	
+Look into:	
 	- http://railsrescue.com/blog/2015-05-28-step-by-step-setup-to-send-form-data-to-google-sheets/
 	- https://script.google.com/macros/s/AKfycbz3NUvOMbUfPEPB8jnVmxEfSn-OExc7N62g88VQionRgxxtt6c/exec
 	- https://docs.google.com/spreadsheets/d/1NeNdDDMy6pkRbTyuqJxTg3h-Z7YHxCuoKX9bCPXsfTo/pubhtml
@@ -12,4 +9,6 @@ Code:
 	- average function (Km. per liter)
 		- sanitize input (check for null/empty, numbers only etc.)
 			- HTML5 deals with this :)
-	- decide on how to post to Google Sheet and start coding :)
+
+Sheet:
+	- fix wrong average (wtf is going on ?)
